--- a/core/src/main/resources/messages/messages_ru.yml
+++ b/core/src/main/resources/messages/messages_ru.yml
@@ -1,37 +1,37 @@
-Prefix: '&l&oУкрашения >&r'
-No-Permission: '%prefix% &c&lУ вас нет прав!'
-Cosmetic-Disabled: '%prefix% &c&lЭто украшение отключено!'
-Invalid-Gadget: '%prefix% &c&lНедействительный гаджет!'
-Invalid-Pet: '%prefix% &c&lНедействительное животное!'
-Invalid-Mount: '%prefix% &c&lНедействительный транспорт!'
-Invalid-Effect: '%prefix% &c&lНедействительный эффект!'
-Invalid-Morph: '%prefix% &c&lНедействительное превращение!'
-Invalid-Hat: '%prefix% &c&lНедействительный головной убор!'
-Invalid-Suit: '%prefix% &c&lНедействительный костюм!'
-Invalid-Emote: '%prefix% &c&lНедействительная эмоция!'
-Invalid-Menu: '%prefix% &c&lНедействительное меню!'
-Ammo: '&7Ваши заряды: &e%ammo%'
-Purchase: '&a&lКупить'
-Cancel: '&c&lОтменить'
-Buy-Ammo-Description: '&e&lКупить %amount% %gadgetname% заряд &e&lЗа $%price%'
+Prefix: '&l&oКосметика >&r'
+No-Permission: '%prefix% &c&lУ Вас нет разрешения!'
+Cosmetic-Disabled: '%prefix% &c&lЭтот косметик отключен!'
+Invalid-Gadget: '%prefix% &c&lНеверный аксессуар!'
+Invalid-Pet: '%prefix% &c&lНеверный питомец!'
+Invalid-Mount: '%prefix% &c&lНеверное снаряжение!'
+Invalid-Effect: '%prefix% &c&lНеверный эффект!'
+Invalid-Morph: '%prefix% &c&lНеверная перевоплощение!'
+Invalid-Hat: '%prefix% &c&lНеверная шляпа!'
+Invalid-Suit: '%prefix% &c&lНеверный костюм!'
+Invalid-Emote: '%prefix% &c&lНеверная эмоция!'
+Invalid-Menu: '%prefix% &c&lНеверное меню!'
+Ammo: '&7Ваши патроны: &e%ammo%'
+Purchase: '&a&lПРИОБРЕСТИ'
+Cancel: '&c&lОТМЕНИТЬ'
+Buy-Ammo-Description: '&e&lКупить %amount% патронов %gadgetname% за &e&l$%price%'
 Buy-Cosmetic-Description: '&e&lКупить %gadgetname% &e&lза $%price%'
-Right-Click-Buy-Ammo: '&7ПКМ для покупки боеприпасов'
-Click-To-Purchase: '&eНажмите, чтобы купить за $%price%'
-Not-Enough-Money: '%prefix% &c&lУ вас недостаточно средств!'
-Successful-Purchase: '%prefix% &a&lУспешно куплено!'
-Buy-Treasure-Key: '&lКупить ключ от сундука сокровищ'
-Treasure-Keys: '&7&lКлючи от сундука сокровищ'
-Treasure-Chests: '&6&lСундуки сокровищ'
-Dont-Have-Key: '&4&lВам нужен ключ!'
-Click-Open-Chest: '&aКликните, чтобы открыть сундук'
-Click-Buy-Key: '&aКликните, чтобы купить ключ'
-Left-Click-Open-Chest: '&aЛКМ чтобы открыть сундук'
-Right-Click-Simple: '&aПКМ чтобы получить косметику'
+Right-Click-Buy-Ammo: '&7Щелкните правой кнопкой для покупки патронов'
+Click-To-Purchase: '&eНажмите для покупки за $%price%'
+Not-Enough-Money: '%prefix% &c&lУ Вас недостаточно денег!'
+Successful-Purchase: '%prefix% &a&lУспешная покупка!'
+Buy-Treasure-Key: '&lКупить сокровищный ключ'
+Treasure-Keys: '&7&lСокровищные ключи'
+Treasure-Chests: '&6&lСокровищные сундуки'
+Dont-Have-Key: '&4&lУ Вас нет ключа!'
+Click-Open-Chest: '&aНажмите чтобы открыть сундук'
+Click-Buy-Key: '&aНажмите чтобы купить ключ'
+Left-Click-Open-Chest: '&aЛевый клик чтобы открыть сундук'
+Right-Click-Simple: '&aПравый клик чтобы просто получить косметику'
 Your-Keys: '&7&oВаши ключи: &f&l%keys%'
-Buy-Treasure-Key-ItemName: '&e&l1 &7&lКлюч от сундука с сокровищами &e&lза $%price%'
+Buy-Treasure-Key-ItemName: '&e&l1 &7&lСокровищный ключ &e&lза $%price%'
 You-Won-Treasure-Chests: '%prefix% &f&lВы выиграли: %name%!'
-Treasure-Chest-Occupied: '%prefix% &c&lВсе локации с сокровищами заняты, пожалуйста, попробуйте позже'
-No-Ammo: '%prefix% &c&в вашем распоряжении нет боеприпасов для этого гаджета!'
+Treasure-Chest-Occupied: '%prefix% &c&lВсе места для сокровищ полны, подождите и попробуйте снова'
+No-Ammo: '%prefix% &c&lУ Вас нет патронов для этого аксессуара!'
 Clear:
   Cosmetics: '&c&lОчистить используемую косметику'
   Gadgets: '&c&lОчистить выбранный гаджет'
@@ -44,6 +44,18 @@ Clear:
   Emotes: '&c&lОчистить выбранную эмоцию'
   Projectile-Effects: '&c&lClear current projectile effect'
   Death-Effects: '&c&lClear current death effect'
+Clear:
+ Cosmetics: '&c&lОчистить косметику'
+ Gadgets: '&c&lОчистить текущий аксессуар'
+ Pets: '&c&lОчистить текущего питомца'
+ Mounts: '&c&lОчистить текущее снаряжение'
+ Particle-Effects: '&c&lОчистить текущий эффект'
+ Morphs: '&c&lОчистить текущую перевоплощение'
+ Hats: '&c&lОчистить текущую шляпу'
+ Suits: '&c&lОчистить текущий костюм'
+ Emotes: '&c&lОчистить текущую эмоцию'
+ Projectile-Effects: '&c&lОчистить текущий эффект проектиля'
+ Death-Effects: '&c&lОчистить текущий эффект смерти'
 Menu:
   Purchase-Rename:
     Button:
